htdocs/theme/raw/sass/features/_notification.scss
.form-notificationlist {
    .selectall {
        margin-top: 15px;
        margin-right: 30px;
        font-size: $font-size-base - 2;
    }
    .notification-list {
        padding-top: 20px;
        clear: both;
    }
}
.notification-parent {
    .bulk-actions {
        label {
            font-size: 16px;
        }
        @include media-breakpoint-up(sm) {
            float: left;
        }
    }
    .form-select-filter {
        margin-top: 10px;
        @include media-breakpoint-up(sm) {
            margin-top: 0;
            float: right;
        }
        .input-group .form-group,
        .input-group-addon {
            width: auto;
            @include media-breakpoint-up(sm) {
                display: table-cell;
            }
        }
    }
}
.notification {
    .card-control {
        top: 5px;
        + a[data-toggle="collapse"] {
            padding-left: 60px;
            padding-right: 30px;
        }
    }
    .details-group {
        display: block;
        position: relative;
        > .icon:not(.collapse-indicator) {
            position: absolute;
            left: -53px;
            top: 4px;
        }
        .collapse-indicator {
            position: absolute;
            right: -20px;
            top: 0;
        }
    }
    .details-group span {
        display: inline-block;
        vertical-align: middle;
    }
    .fromusers {
        margin-bottom: 0;
    }
    .tousers {
        margin-bottom: 15px;
    }
    .action {
        padding-right: 10px;
    }
    .subject {
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        max-width: 100%;
    }
    .card-header {
        font-weight: 300;
    }
}

.touser,
.fromuser {
    padding-right: 10px;
}

